<?php
namespace Patterns\Creational\Builder\Domnikl;

class Car extends Vehicle {}
