<?php
namespace Patterns\Creational\Builder\Domnikl;

class Door {}