<?php
namespace Patterns\Creational\Builder\Domnikl;

class Truck extends Vehicle {}
