<?php
namespace Patterns\Creational\Builder\Domnikl;

class Wheel {}
